package org.ting.pattern.absfactory;

/**
 * @author 张韧炼
 * @create 2019-07-01 下午6:09
 **/
public interface Color {
    void fill();
}
