package org.ting.pattern.factory;

/**
 * @author 张韧炼
 * @create 2019-07-01 下午4:41
 **/
public interface Shape  {
    void draw();
}
